--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,16 +8,22 @@ html,body {
     height: 100vh;
     width: 100vw;
 }
+body {
+    background-image: url('../imagens/fundo-madeira.jpg');
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
 main {
     position: relative;
-    background-color: green;
     height: 100vh;
 }
-div#telefone {
+section#telefone {
     position: absolute;
     top: 50%;
     left: 50%;
-    background-color: blue;
-    width: 800px;
-    height: 867px;
+    transform: translate(-50%,-50%);
+    width: 311px;
+    height: 624px;
 }
