--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,3 +36,20 @@ iframe#tela {
     width: 265px;
     height: 470px;
 }
+section#rede-social {
+    text-align: right;
+}
+section#rede-social img {
+    width: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.277);
+    box-sizing: border-box;
+}
+section#rede-social  img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.636);
+    transform: translate(-3px,-3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.615);
+    transition: transform .3s, border .5s;
+    
+}
