--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,11 +38,13 @@ iframe#tela {
 }
 section#rede-social {
     text-align: right;
+    margin: 10px;
+    width: 100%;
 }
 section#rede-social img {
     width: 50px;
     border-radius: 50%;
-    margin: 10px;
+    margin: 20px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.277);
     box-sizing: border-box;
 }
